fix nav option and title alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -120,7 +120,7 @@ body {
 
     .sec-title {
         font-weight: 700;
-        font-size: 48px;
+        font-size: 52px;
         line-height: 70px;
         text-align: left;
         letter-spacing: -0.03em;
@@ -232,7 +232,7 @@ body {
     .sec-title {
         font-weight: 700;
         font-size: 52px;
-        line-height: 50px;
+        line-height: 70px;
         text-align: left;
         letter-spacing: -0.03em;
         color: #000000;
@@ -284,7 +284,8 @@ body {
             width: 60px;
             height: 60px;
             border: none;
-            background: url(../src/image/Button.png);
+            background: white url(../src/image/Button.png);
+            font-size: 0;
         }
 
         :first-child {
